fixed visual issues with form-error <p> appearing and disappearing which caused page elements to shift in position and size

--- a/src/App.css
+++ b/src/App.css
@@ -157,6 +157,8 @@ body {
 	border: none;
 	padding: 0.5rem;
 	margin-bottom: 0.5rem;
+	max-height: 2rem;
+	align-self: end;
 }
 
 .todo-wrapper {
@@ -195,6 +197,13 @@ body {
 
 .form-error {
 	color: red;
+	min-height: 20px;
+	margin-left: 0.5rem;
+
+	:empty {
+		visibility: hidden;
+		margin: 0;
+	}
 }
 
 @media (max-width: 1300px) {
